--- a/src/app/feature/search/search.component.html
+++ b/src/app/feature/search/search.component.html
@@ -1,3 +1,15 @@
-<p>
-  search works!
-</p>
+<mat-form-field [floatLabel]="'never'">
+	<mat-icon matPrefix>search</mat-icon>
+	<input #nameSearch
+	       matInput
+	       placeholder="filter movie by a name"
+	       [formControl]="searchFormControl"
+	       (keyup.enter)="search(nameSearch.value)"
+	       [matAutocomplete]="auto">
+</mat-form-field>
+<mat-autocomplete #auto="matAutocomplete">
+	<mat-option *ngFor="let option of names"
+	            [value]="option">
+		{{ option }}
+	</mat-option>
+</mat-autocomplete>
