Add fully functional version without styles

--- a/src/app/feature/movies-list/movies-list.component.html
+++ b/src/app/feature/movies-list/movies-list.component.html
@@ -1,8 +1,7 @@
-<router-outlet></router-outlet>
 <ul>
   <li *ngFor="let movie of movies">
-    <app-movie-item [movie]='movie'>
-
+    <app-movie-item [movie]='movie'
+                    (click)="onMovieClick(movie)">
     </app-movie-item>
   </li>
 </ul>
