--- a/src/app/feature/search/search.component.scss
+++ b/src/app/feature/search/search.component.scss
@@ -1,8 +1,8 @@
-.example-viewport {
+.search-options-viewport {
   height: 200px;
   max-height: 300px;
 }
 
-.example-item {
+.option-item {
   height: 50px;
 }
