--- a/src/app/feature/movies-list/movie-item/movie-item.component.html
+++ b/src/app/feature/movies-list/movie-item/movie-item.component.html
@@ -1,3 +1,17 @@
-<p>
-  {{movie.key}}
-</p>
+<mat-card class="animated-card movie-item" (click)="onClick($event)" [@flyInOut]>
+  <mat-card-header>
+    <div mat-card-avatar class="example-header-image"></div>
+    <mat-card-title class="movie-name">{{movie.name}}</mat-card-title>
+    <mat-card-subtitle>Genre</mat-card-subtitle>
+  </mat-card-header>
+  <img src="assets/images/movie-covers/{{movie.img}}" alt="Photo of a {{movie.key}}">
+  <mat-card-content>
+    <p class="movie-description">
+      {{movie.description}}
+    </p>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button>LIKE</button>
+    <button mat-button>SHARE</button>
+  </mat-card-actions>
+</mat-card>
