--- a/src/app/feature/movies-list/movies-list.component.scss
+++ b/src/app/feature/movies-list/movies-list.component.scss
@@ -13,6 +13,7 @@ app-movie-item {
   float: left;
   width: 20%;
   min-width: 250px;
-  margin: 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
 }
 
