--- a/src/app/feature/movies-list/movie-item/movie-item.component.html
+++ b/src/app/feature/movies-list/movie-item/movie-item.component.html
@@ -1,10 +1,10 @@
-<mat-card class="animated-card movie-item" (click)="onClick($event)" [@flyInOut]>
+<mat-card class="animated-card card-movie-item" (click)="onClick($event)" [@flyInOut]>
   <mat-card-header>
     <div mat-card-avatar class="example-header-image"></div>
     <mat-card-title class="movie-name">{{movie.name}}</mat-card-title>
     <mat-card-subtitle>Genre</mat-card-subtitle>
   </mat-card-header>
-  <img src="assets/images/movie-covers/{{movie.img}}" alt="Photo of a {{movie.key}}">
+  <img class="movie-image" src="assets/images/movie-covers/{{movie.img}}" alt="Photo of a {{movie.key}}">
   <mat-card-content>
     <p class="movie-description">
       {{movie.description}}
