--- a/src/app/feature/search/search.component.scss
+++ b/src/app/feature/search/search.component.scss
@@ -1,3 +1,8 @@
+mat-form-field.search-form {
+  max-width: 500px;
+  min-width: 300px;
+}
+
 .search-options-viewport {
   height: 200px;
   max-height: 300px;
