--- a/src/app/feature/movies-list/movie-item/movie-item.component.html
+++ b/src/app/feature/movies-list/movie-item/movie-item.component.html
@@ -1,8 +1,7 @@
-<mat-card class="animated-card card-movie-item" (click)="onClick($event)" [@flyInOut]>
+<mat-card class="card-movie-item" (click)="onClick($event)" [@flyInOut]>
   <mat-card-header>
-    <div mat-card-avatar class="example-header-image"></div>
     <mat-card-title class="movie-name">{{movie.name}}</mat-card-title>
-    <mat-card-subtitle>Genre</mat-card-subtitle>
+    <mat-card-subtitle>{{movie.Genres}}</mat-card-subtitle>
   </mat-card-header>
   <img class="movie-image" src="assets/images/movie-covers/{{movie.img}}" alt="Photo of a {{movie.key}}">
   <mat-card-content>
