--- a/src/app/feature/genre-filter/genre-filter.component.html
+++ b/src/app/feature/genre-filter/genre-filter.component.html
@@ -8,4 +8,11 @@
       </mat-select-trigger>
       <mat-option *ngFor="let genre of genres" [value]="genre">{{genre}}</mat-option>
     </mat-select>
+    <button mat-button
+          matSuffix
+          mat-icon-button
+          aria-label="Clear"
+          (click)="clear()">
+    <mat-icon>close</mat-icon>
+  </button>
   </mat-form-field>
