Remove unused buttons

--- a/src/app/feature/movies-list/movie-item/movie-item.component.html
+++ b/src/app/feature/movies-list/movie-item/movie-item.component.html
@@ -9,8 +9,8 @@
       {{movie.description}}
     </p>
   </mat-card-content>
-  <mat-card-actions>
+  <!-- TODO add in future <mat-card-actions>
     <button mat-button>LIKE</button>
     <button mat-button>SHARE</button>
-  </mat-card-actions>
+  </mat-card-actions> -->
 </mat-card>
