--- a/src/app/feature/cinema/cinema.component.html
+++ b/src/app/feature/cinema/cinema.component.html
@@ -1,14 +1,5 @@
 <div class="cinema">
-  <div class="cinema-filter">
-    <app-search class="search"
-                [movies]="movies"
-                (complete)="onSearchComplete($event)"
-                (reset)="onResetFilter()">
-    </app-search>
-    <app-genre-filter [movies]="movies"
-                      [genres]="genres"
-                      (complete)="onSearchComplete($event)"
-                      (reset)="onResetFilter()"></app-genre-filter>
-  </div>
-  <app-movies-list [movies]="movies" class="movies-list"></app-movies-list>
+  <app-filters-host [movies]="movies"></app-filters-host>
+  <app-movies-list [movies]="movies"
+                   class="movies-list"></app-movies-list>
 </div>
