--- a/src/app/feature/filters/search/search.component.html
+++ b/src/app/feature/filters/search/search.component.html
@@ -16,7 +16,7 @@
   </button>
 </mat-form-field>
 <mat-autocomplete #auto="matAutocomplete">
-  <cdk-virtual-scroll-viewport itemSize="50"
+  <cdk-virtual-scroll-viewport itemSize="50" minBufferPx="200" maxBufferPx="400"
                                class="search-options-viewport">
     <mat-option class="option-item"
                 *cdkVirtualFor="let option of names"
