--- a/src/app/feature/filters/filter-by-genre/genre-filter.component.html
+++ b/src/app/feature/filters/filter-by-genre/genre-filter.component.html
@@ -1,5 +1,5 @@
 <mat-form-field>
-    <mat-select placeholder="Genres" [formControl]="genresForm" multiple>
+    <mat-select placeholder="filter movies by a genre" [formControl]="genresForm" multiple>
       <mat-select-trigger>
         {{genresForm.value ? genresForm.value[0] : ''}}
         <span *ngIf="genresForm.value?.length > 1" class="example-additional-selection">
