--- a/src/app/feature/filters/filter-by-genre/genre-filter.component.html
+++ b/src/app/feature/filters/filter-by-genre/genre-filter.component.html
@@ -6,7 +6,7 @@
           (+{{genresForm.value.length - 1}} {{genresForm.value?.length === 2 ? 'other' : 'others'}})
         </span>
       </mat-select-trigger>
-      <mat-option class="option-{{genre}}" *ngFor="let genre of genres" [value]="genre">{{genre}}</mat-option>
+      <mat-option *ngFor="let genre of genres" [value]="genre">{{genre}}</mat-option>
     </mat-select>
     <button class="genres-clear-button"
           mat-button
